// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCategoriesWithAllSubjects with a vocational subjects replaced 1`] = `
Array [
  Object {
    "name": "yrkesfag",
    "subjects": Array [
      Object {
        "id": "51",
        "name": "Barne- og ungdomsarbeiderfag Vg2",
        "nodeId": "51",
        "text": "Barne- og ungdomsarbeiderfag Vg2",
        "url": "/nb/node/51",
      },
      Object {
        "id": "137414",
        "name": "Brønnteknikk",
        "nodeId": "137414",
        "text": "Brønnteknikk",
        "url": "/nb/node/137414",
      },
      Object {
        "id": "127013",
        "name": "Bygg- og anleggsteknikk Vg1",
        "nodeId": "127013",
        "text": "Bygg- og anleggsteknikk Vg1",
        "url": "/nb/node/127013",
      },
      Object {
        "id": "44",
        "name": "Design og håndverk Vg1",
        "nodeId": "44",
        "text": "Design og håndverk Vg1",
        "url": "/nb/node/44",
      },
      Object {
        "id": "43",
        "name": "Elektrofag Vg1",
        "nodeId": "43",
        "text": "Elektrofag Vg1",
        "url": "/nb/node/43",
      },
      Object {
        "id": "8",
        "name": "Helse- og oppvekstfag Vg1",
        "nodeId": "8",
        "text": "Helse- og oppvekstfag Vg1",
        "url": "/nb/node/8",
      },
      Object {
        "id": "52",
        "name": "Helsearbeiderfag Vg2",
        "nodeId": "52",
        "text": "Helsearbeiderfag Vg2",
        "url": "/nb/node/52",
      },
      Object {
        "id": "102783",
        "name": "IKT-servicefag Vg2",
        "nodeId": "102783",
        "text": "IKT-servicefag Vg2",
        "url": "/nb/node/102783",
      },
      Object {
        "id": "86643",
        "name": "Kokk- og servitørfag Vg2",
        "nodeId": "86643",
        "text": "Kokk- og servitørfag Vg2",
        "url": "/nb/node/86643",
      },
      Object {
        "id": "137415",
        "name": "Naturbruk Vg1",
        "nodeId": "137415",
        "text": "Naturbruk Vg1",
        "url": "/nb/node/137415",
      },
      Object {
        "id": "102780",
        "name": "Reiseliv Vg2",
        "nodeId": "102780",
        "text": "Reiseliv Vg2",
        "url": "/nb/node/102780",
      },
      Object {
        "id": "37",
        "name": "Restaurant- og matfag Vg1",
        "nodeId": "37",
        "text": "Restaurant- og matfag Vg1",
        "url": "/nb/node/37",
      },
      Object {
        "id": "2600",
        "name": "Romteknologi Vg3",
        "nodeId": "2600",
        "text": "Romteknologi Vg3",
        "url": "/nb/node/2600",
      },
      Object {
        "id": "102781",
        "name": "Salg, service og sikkerhet Vg2",
        "nodeId": "102781",
        "text": "Salg, service og sikkerhet Vg2",
        "url": "/nb/node/102781",
      },
      Object {
        "id": "urn:subject:12",
        "name": "Service og samferdsel Vg1",
        "path": "/subject:12",
        "text": "Service og samferdsel Vg1",
        "url": "/subjects/subject:12",
      },
      Object {
        "id": "35",
        "name": "Teknikk og industriell produksjon Vg1",
        "nodeId": "35",
        "text": "Teknikk og industriell produksjon Vg1",
        "url": "/nb/node/35",
      },
      Object {
        "id": "102782",
        "name": "Transport og logistikk Vg2",
        "nodeId": "102782",
        "text": "Transport og logistikk Vg2",
        "url": "/nb/node/102782",
      },
    ],
  },
]
`;

exports[`getCategoriesWithAllSubjects with all old node subjects (en locale) 1`] = `
Array [
  Object {
    "name": "fellesfag",
    "subjects": Array [
      Object {
        "id": "42",
        "lang": "en",
        "name": "Engelsk",
        "nodeId": "42",
        "text": "Engelsk",
        "url": "/en/node/42",
      },
      Object {
        "id": "52253",
        "name": "Historie Vg2 og Vg3",
        "nodeId": "52253",
        "text": "Historie Vg2 og Vg3",
        "url": "/nb/node/52253",
      },
      Object {
        "id": "46",
        "name": "Kroppsøving",
        "nodeId": "46",
        "text": "Kroppsøving",
        "url": "/nb/node/46",
      },
      Object {
        "id": "55",
        "name": "Matematikk Vg1P",
        "nodeId": "55",
        "text": "Matematikk Vg1P",
        "url": "/nb/node/55",
      },
      Object {
        "id": "54",
        "name": "Matematikk Vg1T",
        "nodeId": "54",
        "text": "Matematikk Vg1T",
        "url": "/nb/node/54",
      },
      Object {
        "id": "53",
        "name": "Matematikk Vg2P",
        "nodeId": "53",
        "text": "Matematikk Vg2P",
        "url": "/nb/node/53",
      },
      Object {
        "id": "7",
        "name": "Naturfag",
        "nodeId": "7",
        "text": "Naturfag",
        "url": "/nb/node/7",
      },
      Object {
        "id": "27",
        "name": "Norsk Vg2 og Vg3 SF",
        "nodeId": "27",
        "text": "Norsk Vg2 og Vg3 SF",
        "url": "/nb/node/27",
      },
      Object {
        "id": "116784",
        "name": "Norsk YF og SF",
        "nodeId": "116784",
        "text": "Norsk YF og SF",
        "url": "/nb/node/116784",
      },
      Object {
        "id": "36",
        "name": "Samfunnsfag",
        "nodeId": "36",
        "text": "Samfunnsfag",
        "url": "/nb/node/36",
      },
      Object {
        "beta": true,
        "id": "126960",
        "name": "Sørsamisk som førstespråk",
        "nodeId": "126960",
        "text": "Sørsamisk som førstespråk",
        "url": "/nb/node/126960",
      },
    ],
  },
  Object {
    "name": "yrkesfag",
    "subjects": Array [
      Object {
        "id": "51",
        "name": "Barne- og ungdomsarbeiderfag Vg2",
        "nodeId": "51",
        "text": "Barne- og ungdomsarbeiderfag Vg2",
        "url": "/nb/node/51",
      },
      Object {
        "id": "137414",
        "name": "Brønnteknikk",
        "nodeId": "137414",
        "text": "Brønnteknikk",
        "url": "/nb/node/137414",
      },
      Object {
        "id": "127013",
        "name": "Bygg- og anleggsteknikk Vg1",
        "nodeId": "127013",
        "text": "Bygg- og anleggsteknikk Vg1",
        "url": "/nb/node/127013",
      },
      Object {
        "id": "44",
        "name": "Design og håndverk Vg1",
        "nodeId": "44",
        "text": "Design og håndverk Vg1",
        "url": "/nb/node/44",
      },
      Object {
        "id": "43",
        "name": "Elektrofag Vg1",
        "nodeId": "43",
        "text": "Elektrofag Vg1",
        "url": "/nb/node/43",
      },
      Object {
        "id": "8",
        "name": "Helse- og oppvekstfag Vg1",
        "nodeId": "8",
        "text": "Helse- og oppvekstfag Vg1",
        "url": "/nb/node/8",
      },
      Object {
        "id": "52",
        "name": "Helsearbeiderfag Vg2",
        "nodeId": "52",
        "text": "Helsearbeiderfag Vg2",
        "url": "/nb/node/52",
      },
      Object {
        "id": "102783",
        "name": "IKT-servicefag Vg2",
        "nodeId": "102783",
        "text": "IKT-servicefag Vg2",
        "url": "/nb/node/102783",
      },
      Object {
        "id": "86643",
        "name": "Kokk- og servitørfag Vg2",
        "nodeId": "86643",
        "text": "Kokk- og servitørfag Vg2",
        "url": "/nb/node/86643",
      },
      Object {
        "id": "137415",
        "name": "Naturbruk Vg1",
        "nodeId": "137415",
        "text": "Naturbruk Vg1",
        "url": "/nb/node/137415",
      },
      Object {
        "id": "102780",
        "name": "Reiseliv Vg2",
        "nodeId": "102780",
        "text": "Reiseliv Vg2",
        "url": "/nb/node/102780",
      },
      Object {
        "id": "37",
        "name": "Restaurant- og matfag Vg1",
        "nodeId": "37",
        "text": "Restaurant- og matfag Vg1",
        "url": "/nb/node/37",
      },
      Object {
        "id": "2600",
        "name": "Romteknologi Vg3",
        "nodeId": "2600",
        "text": "Romteknologi Vg3",
        "url": "/nb/node/2600",
      },
      Object {
        "id": "102781",
        "name": "Salg, service og sikkerhet Vg2",
        "nodeId": "102781",
        "text": "Salg, service og sikkerhet Vg2",
        "url": "/nb/node/102781",
      },
      Object {
        "id": "52291",
        "name": "Service og samferdsel Vg1",
        "nodeId": "52291",
        "text": "Service og samferdsel Vg1",
        "url": "/nb/node/52291",
      },
      Object {
        "id": "35",
        "name": "Teknikk og industriell produksjon Vg1",
        "nodeId": "35",
        "text": "Teknikk og industriell produksjon Vg1",
        "url": "/nb/node/35",
      },
      Object {
        "id": "102782",
        "name": "Transport og logistikk Vg2",
        "nodeId": "102782",
        "text": "Transport og logistikk Vg2",
        "url": "/nb/node/102782",
      },
    ],
  },
  Object {
    "name": "studiespesialiserende",
    "subjects": Array [
      Object {
        "id": "52234",
        "name": "Biologi 1",
        "nodeId": "52234",
        "text": "Biologi 1",
        "url": "/nb/node/52234",
      },
      Object {
        "id": "71085",
        "lang": "en",
        "name": "Engelskspråklig litteratur og kultur",
        "nodeId": "71085",
        "text": "Engelskspråklig litteratur og kultur",
        "url": "/en/node/71085",
      },
      Object {
        "id": "56850",
        "lang": "en",
        "name": "Internasjonal engelsk",
        "nodeId": "56850",
        "text": "Internasjonal engelsk",
        "url": "/en/node/56850",
      },
      Object {
        "id": "127756",
        "name": "Kinesisk 1",
        "nodeId": "127756",
        "text": "Kinesisk 1",
        "url": "/nb/node/127756",
      },
      Object {
        "id": "138654",
        "name": "Kinesisk 2",
        "nodeId": "138654",
        "text": "Kinesisk 2",
        "url": "/nb/node/138654",
      },
      Object {
        "id": "6118",
        "name": "Kommunikasjon og kultur 1",
        "nodeId": "6118",
        "text": "Kommunikasjon og kultur 1",
        "url": "/nb/node/6118",
      },
      Object {
        "id": "2602",
        "name": "Kommunikasjon og kultur 2",
        "nodeId": "2602",
        "text": "Kommunikasjon og kultur 2",
        "url": "/nb/node/2602",
      },
      Object {
        "id": "2603",
        "name": "Kommunikasjon og kultur 3",
        "nodeId": "2603",
        "text": "Kommunikasjon og kultur 3",
        "url": "/nb/node/2603",
      },
      Object {
        "id": "52293",
        "name": "Markedsføring og ledelse 1",
        "nodeId": "52293",
        "text": "Markedsføring og ledelse 1",
        "url": "/nb/node/52293",
      },
      Object {
        "id": "57933",
        "name": "Matematikk R1",
        "nodeId": "57933",
        "text": "Matematikk R1",
        "url": "/nb/node/57933",
      },
      Object {
        "id": "98361",
        "name": "Matematikk R2",
        "nodeId": "98361",
        "text": "Matematikk R2",
        "url": "/nb/node/98361",
      },
      Object {
        "id": "57934",
        "name": "Matematikk S1",
        "nodeId": "57934",
        "text": "Matematikk S1",
        "url": "/nb/node/57934",
      },
      Object {
        "id": "98366",
        "name": "Matematikk S2",
        "nodeId": "98366",
        "text": "Matematikk S2",
        "url": "/nb/node/98366",
      },
      Object {
        "id": "52222",
        "name": "Medie- og informasjonskunnskap 1 og 2",
        "nodeId": "52222",
        "text": "Medie- og informasjonskunnskap 1 og 2",
        "url": "/nb/node/52222",
      },
      Object {
        "beta": true,
        "id": "156500",
        "name": "Medieuttrykk og mediesamfunnet",
        "nodeId": "156500",
        "text": "Medieuttrykk og mediesamfunnet",
        "url": "/nb/node/156500",
      },
      Object {
        "id": "71082",
        "lang": "en",
        "name": "Samfunnsfaglig engelsk",
        "nodeId": "71082",
        "text": "Samfunnsfaglig engelsk",
        "url": "/en/node/71082",
      },
      Object {
        "id": "137416",
        "name": "Tysk 1",
        "nodeId": "137416",
        "text": "Tysk 1",
        "url": "/nb/node/137416",
      },
      Object {
        "id": "138655",
        "name": "Tysk 2",
        "nodeId": "138655",
        "text": "Tysk 2",
        "url": "/nb/node/138655",
      },
    ],
  },
]
`;

exports[`getCategoriesWithAllSubjects with all old node subjects (nb locale) 1`] = `
Array [
  Object {
    "name": "fellesfag",
    "subjects": Array [
      Object {
        "id": "42",
        "lang": "en",
        "name": "Engelsk",
        "nodeId": "42",
        "text": "Engelsk",
        "url": "/en/node/42",
      },
      Object {
        "id": "52253",
        "name": "Historie Vg2 og Vg3",
        "nodeId": "52253",
        "text": "Historie Vg2 og Vg3",
        "url": "/nb/node/52253",
      },
      Object {
        "id": "46",
        "name": "Kroppsøving",
        "nodeId": "46",
        "text": "Kroppsøving",
        "url": "/nb/node/46",
      },
      Object {
        "id": "55",
        "name": "Matematikk Vg1P",
        "nodeId": "55",
        "text": "Matematikk Vg1P",
        "url": "/nb/node/55",
      },
      Object {
        "id": "54",
        "name": "Matematikk Vg1T",
        "nodeId": "54",
        "text": "Matematikk Vg1T",
        "url": "/nb/node/54",
      },
      Object {
        "id": "53",
        "name": "Matematikk Vg2P",
        "nodeId": "53",
        "text": "Matematikk Vg2P",
        "url": "/nb/node/53",
      },
      Object {
        "id": "7",
        "name": "Naturfag",
        "nodeId": "7",
        "text": "Naturfag",
        "url": "/nb/node/7",
      },
      Object {
        "id": "27",
        "name": "Norsk Vg2 og Vg3 SF",
        "nodeId": "27",
        "text": "Norsk Vg2 og Vg3 SF",
        "url": "/nb/node/27",
      },
      Object {
        "id": "116784",
        "name": "Norsk YF og SF",
        "nodeId": "116784",
        "text": "Norsk YF og SF",
        "url": "/nb/node/116784",
      },
      Object {
        "id": "36",
        "name": "Samfunnsfag",
        "nodeId": "36",
        "text": "Samfunnsfag",
        "url": "/nb/node/36",
      },
      Object {
        "beta": true,
        "id": "126960",
        "name": "Sørsamisk som førstespråk",
        "nodeId": "126960",
        "text": "Sørsamisk som førstespråk",
        "url": "/nb/node/126960",
      },
    ],
  },
  Object {
    "name": "yrkesfag",
    "subjects": Array [
      Object {
        "id": "51",
        "name": "Barne- og ungdomsarbeiderfag Vg2",
        "nodeId": "51",
        "text": "Barne- og ungdomsarbeiderfag Vg2",
        "url": "/nb/node/51",
      },
      Object {
        "id": "137414",
        "name": "Brønnteknikk",
        "nodeId": "137414",
        "text": "Brønnteknikk",
        "url": "/nb/node/137414",
      },
      Object {
        "id": "127013",
        "name": "Bygg- og anleggsteknikk Vg1",
        "nodeId": "127013",
        "text": "Bygg- og anleggsteknikk Vg1",
        "url": "/nb/node/127013",
      },
      Object {
        "id": "44",
        "name": "Design og håndverk Vg1",
        "nodeId": "44",
        "text": "Design og håndverk Vg1",
        "url": "/nb/node/44",
      },
      Object {
        "id": "43",
        "name": "Elektrofag Vg1",
        "nodeId": "43",
        "text": "Elektrofag Vg1",
        "url": "/nb/node/43",
      },
      Object {
        "id": "8",
        "name": "Helse- og oppvekstfag Vg1",
        "nodeId": "8",
        "text": "Helse- og oppvekstfag Vg1",
        "url": "/nb/node/8",
      },
      Object {
        "id": "52",
        "name": "Helsearbeiderfag Vg2",
        "nodeId": "52",
        "text": "Helsearbeiderfag Vg2",
        "url": "/nb/node/52",
      },
      Object {
        "id": "102783",
        "name": "IKT-servicefag Vg2",
        "nodeId": "102783",
        "text": "IKT-servicefag Vg2",
        "url": "/nb/node/102783",
      },
      Object {
        "id": "86643",
        "name": "Kokk- og servitørfag Vg2",
        "nodeId": "86643",
        "text": "Kokk- og servitørfag Vg2",
        "url": "/nb/node/86643",
      },
      Object {
        "id": "137415",
        "name": "Naturbruk Vg1",
        "nodeId": "137415",
        "text": "Naturbruk Vg1",
        "url": "/nb/node/137415",
      },
      Object {
        "id": "102780",
        "name": "Reiseliv Vg2",
        "nodeId": "102780",
        "text": "Reiseliv Vg2",
        "url": "/nb/node/102780",
      },
      Object {
        "id": "37",
        "name": "Restaurant- og matfag Vg1",
        "nodeId": "37",
        "text": "Restaurant- og matfag Vg1",
        "url": "/nb/node/37",
      },
      Object {
        "id": "2600",
        "name": "Romteknologi Vg3",
        "nodeId": "2600",
        "text": "Romteknologi Vg3",
        "url": "/nb/node/2600",
      },
      Object {
        "id": "102781",
        "name": "Salg, service og sikkerhet Vg2",
        "nodeId": "102781",
        "text": "Salg, service og sikkerhet Vg2",
        "url": "/nb/node/102781",
      },
      Object {
        "id": "52291",
        "name": "Service og samferdsel Vg1",
        "nodeId": "52291",
        "text": "Service og samferdsel Vg1",
        "url": "/nb/node/52291",
      },
      Object {
        "id": "35",
        "name": "Teknikk og industriell produksjon Vg1",
        "nodeId": "35",
        "text": "Teknikk og industriell produksjon Vg1",
        "url": "/nb/node/35",
      },
      Object {
        "id": "102782",
        "name": "Transport og logistikk Vg2",
        "nodeId": "102782",
        "text": "Transport og logistikk Vg2",
        "url": "/nb/node/102782",
      },
    ],
  },
  Object {
    "name": "studiespesialiserende",
    "subjects": Array [
      Object {
        "id": "52234",
        "name": "Biologi 1",
        "nodeId": "52234",
        "text": "Biologi 1",
        "url": "/nb/node/52234",
      },
      Object {
        "id": "71085",
        "lang": "en",
        "name": "Engelskspråklig litteratur og kultur",
        "nodeId": "71085",
        "text": "Engelskspråklig litteratur og kultur",
        "url": "/en/node/71085",
      },
      Object {
        "id": "56850",
        "lang": "en",
        "name": "Internasjonal engelsk",
        "nodeId": "56850",
        "text": "Internasjonal engelsk",
        "url": "/en/node/56850",
      },
      Object {
        "id": "127756",
        "name": "Kinesisk 1",
        "nodeId": "127756",
        "text": "Kinesisk 1",
        "url": "/nb/node/127756",
      },
      Object {
        "id": "138654",
        "name": "Kinesisk 2",
        "nodeId": "138654",
        "text": "Kinesisk 2",
        "url": "/nb/node/138654",
      },
      Object {
        "id": "6118",
        "name": "Kommunikasjon og kultur 1",
        "nodeId": "6118",
        "text": "Kommunikasjon og kultur 1",
        "url": "/nb/node/6118",
      },
      Object {
        "id": "2602",
        "name": "Kommunikasjon og kultur 2",
        "nodeId": "2602",
        "text": "Kommunikasjon og kultur 2",
        "url": "/nb/node/2602",
      },
      Object {
        "id": "2603",
        "name": "Kommunikasjon og kultur 3",
        "nodeId": "2603",
        "text": "Kommunikasjon og kultur 3",
        "url": "/nb/node/2603",
      },
      Object {
        "id": "52293",
        "name": "Markedsføring og ledelse 1",
        "nodeId": "52293",
        "text": "Markedsføring og ledelse 1",
        "url": "/nb/node/52293",
      },
      Object {
        "id": "57933",
        "name": "Matematikk R1",
        "nodeId": "57933",
        "text": "Matematikk R1",
        "url": "/nb/node/57933",
      },
      Object {
        "id": "98361",
        "name": "Matematikk R2",
        "nodeId": "98361",
        "text": "Matematikk R2",
        "url": "/nb/node/98361",
      },
      Object {
        "id": "57934",
        "name": "Matematikk S1",
        "nodeId": "57934",
        "text": "Matematikk S1",
        "url": "/nb/node/57934",
      },
      Object {
        "id": "98366",
        "name": "Matematikk S2",
        "nodeId": "98366",
        "text": "Matematikk S2",
        "url": "/nb/node/98366",
      },
      Object {
        "id": "52222",
        "name": "Medie- og informasjonskunnskap 1 og 2",
        "nodeId": "52222",
        "text": "Medie- og informasjonskunnskap 1 og 2",
        "url": "/nb/node/52222",
      },
      Object {
        "beta": true,
        "id": "156500",
        "name": "Medieuttrykk og mediesamfunnet",
        "nodeId": "156500",
        "text": "Medieuttrykk og mediesamfunnet",
        "url": "/nb/node/156500",
      },
      Object {
        "id": "71082",
        "lang": "en",
        "name": "Samfunnsfaglig engelsk",
        "nodeId": "71082",
        "text": "Samfunnsfaglig engelsk",
        "url": "/en/node/71082",
      },
      Object {
        "id": "137416",
        "name": "Tysk 1",
        "nodeId": "137416",
        "text": "Tysk 1",
        "url": "/nb/node/137416",
      },
      Object {
        "id": "138655",
        "name": "Tysk 2",
        "nodeId": "138655",
        "text": "Tysk 2",
        "url": "/nb/node/138655",
      },
    ],
  },
]
`;

exports[`getCategoriesWithAllSubjects with all old node subjects (nn locale) 1`] = `
Array [
  Object {
    "name": "fellesfag",
    "subjects": Array [
      Object {
        "id": "42",
        "lang": "en",
        "name": "Engelsk",
        "nodeId": "42",
        "text": "Engelsk",
        "url": "/en/node/42",
      },
      Object {
        "id": "52253",
        "name": "Historie Vg2 og Vg3",
        "nodeId": "52253",
        "text": "Historie Vg2 og Vg3",
        "url": "/nn/node/52253",
      },
      Object {
        "id": "46",
        "name": "Kroppsøving",
        "nodeId": "46",
        "text": "Kroppsøving",
        "url": "/nn/node/46",
      },
      Object {
        "id": "55",
        "name": "Matematikk Vg1P",
        "nodeId": "55",
        "text": "Matematikk Vg1P",
        "url": "/nn/node/55",
      },
      Object {
        "id": "54",
        "name": "Matematikk Vg1T",
        "nodeId": "54",
        "text": "Matematikk Vg1T",
        "url": "/nn/node/54",
      },
      Object {
        "id": "53",
        "name": "Matematikk Vg2P",
        "nodeId": "53",
        "text": "Matematikk Vg2P",
        "url": "/nn/node/53",
      },
      Object {
        "id": "7",
        "name": "Naturfag",
        "nodeId": "7",
        "text": "Naturfag",
        "url": "/nn/node/7",
      },
      Object {
        "id": "27",
        "name": "Norsk Vg2 og Vg3 SF",
        "nodeId": "27",
        "text": "Norsk Vg2 og Vg3 SF",
        "url": "/nn/node/27",
      },
      Object {
        "id": "116784",
        "name": "Norsk YF og SF",
        "nodeId": "116784",
        "text": "Norsk YF og SF",
        "url": "/nn/node/116784",
      },
      Object {
        "id": "36",
        "name": "Samfunnsfag",
        "nodeId": "36",
        "text": "Samfunnsfag",
        "url": "/nn/node/36",
      },
      Object {
        "beta": true,
        "id": "126960",
        "name": "Sørsamisk som førstespråk",
        "nodeId": "126960",
        "text": "Sørsamisk som førstespråk",
        "url": "/nn/node/126960",
      },
    ],
  },
  Object {
    "name": "yrkesfag",
    "subjects": Array [
      Object {
        "id": "51",
        "name": "Barne- og ungdomsarbeiderfag Vg2",
        "nodeId": "51",
        "text": "Barne- og ungdomsarbeiderfag Vg2",
        "url": "/nn/node/51",
      },
      Object {
        "id": "137414",
        "name": "Brønnteknikk",
        "nodeId": "137414",
        "text": "Brønnteknikk",
        "url": "/nn/node/137414",
      },
      Object {
        "id": "127013",
        "name": "Bygg- og anleggsteknikk Vg1",
        "nodeId": "127013",
        "text": "Bygg- og anleggsteknikk Vg1",
        "url": "/nn/node/127013",
      },
      Object {
        "id": "44",
        "name": "Design og håndverk Vg1",
        "nodeId": "44",
        "text": "Design og håndverk Vg1",
        "url": "/nn/node/44",
      },
      Object {
        "id": "43",
        "name": "Elektrofag Vg1",
        "nodeId": "43",
        "text": "Elektrofag Vg1",
        "url": "/nn/node/43",
      },
      Object {
        "id": "8",
        "name": "Helse- og oppvekstfag Vg1",
        "nodeId": "8",
        "text": "Helse- og oppvekstfag Vg1",
        "url": "/nn/node/8",
      },
      Object {
        "id": "52",
        "name": "Helsearbeiderfag Vg2",
        "nodeId": "52",
        "text": "Helsearbeiderfag Vg2",
        "url": "/nn/node/52",
      },
      Object {
        "id": "102783",
        "name": "IKT-servicefag Vg2",
        "nodeId": "102783",
        "text": "IKT-servicefag Vg2",
        "url": "/nn/node/102783",
      },
      Object {
        "id": "86643",
        "name": "Kokk- og servitørfag Vg2",
        "nodeId": "86643",
        "text": "Kokk- og servitørfag Vg2",
        "url": "/nn/node/86643",
      },
      Object {
        "id": "137415",
        "name": "Naturbruk Vg1",
        "nodeId": "137415",
        "text": "Naturbruk Vg1",
        "url": "/nn/node/137415",
      },
      Object {
        "id": "102780",
        "name": "Reiseliv Vg2",
        "nodeId": "102780",
        "text": "Reiseliv Vg2",
        "url": "/nn/node/102780",
      },
      Object {
        "id": "37",
        "name": "Restaurant- og matfag Vg1",
        "nodeId": "37",
        "text": "Restaurant- og matfag Vg1",
        "url": "/nn/node/37",
      },
      Object {
        "id": "2600",
        "name": "Romteknologi Vg3",
        "nodeId": "2600",
        "text": "Romteknologi Vg3",
        "url": "/nn/node/2600",
      },
      Object {
        "id": "102781",
        "name": "Salg, service og sikkerhet Vg2",
        "nodeId": "102781",
        "text": "Salg, service og sikkerhet Vg2",
        "url": "/nn/node/102781",
      },
      Object {
        "id": "52291",
        "name": "Service og samferdsel Vg1",
        "nodeId": "52291",
        "text": "Service og samferdsel Vg1",
        "url": "/nn/node/52291",
      },
      Object {
        "id": "35",
        "name": "Teknikk og industriell produksjon Vg1",
        "nodeId": "35",
        "text": "Teknikk og industriell produksjon Vg1",
        "url": "/nn/node/35",
      },
      Object {
        "id": "102782",
        "name": "Transport og logistikk Vg2",
        "nodeId": "102782",
        "text": "Transport og logistikk Vg2",
        "url": "/nn/node/102782",
      },
    ],
  },
  Object {
    "name": "studiespesialiserende",
    "subjects": Array [
      Object {
        "id": "52234",
        "name": "Biologi 1",
        "nodeId": "52234",
        "text": "Biologi 1",
        "url": "/nn/node/52234",
      },
      Object {
        "id": "71085",
        "lang": "en",
        "name": "Engelskspråklig litteratur og kultur",
        "nodeId": "71085",
        "text": "Engelskspråklig litteratur og kultur",
        "url": "/en/node/71085",
      },
      Object {
        "id": "56850",
        "lang": "en",
        "name": "Internasjonal engelsk",
        "nodeId": "56850",
        "text": "Internasjonal engelsk",
        "url": "/en/node/56850",
      },
      Object {
        "id": "127756",
        "name": "Kinesisk 1",
        "nodeId": "127756",
        "text": "Kinesisk 1",
        "url": "/nn/node/127756",
      },
      Object {
        "id": "138654",
        "name": "Kinesisk 2",
        "nodeId": "138654",
        "text": "Kinesisk 2",
        "url": "/nn/node/138654",
      },
      Object {
        "id": "6118",
        "name": "Kommunikasjon og kultur 1",
        "nodeId": "6118",
        "text": "Kommunikasjon og kultur 1",
        "url": "/nn/node/6118",
      },
      Object {
        "id": "2602",
        "name": "Kommunikasjon og kultur 2",
        "nodeId": "2602",
        "text": "Kommunikasjon og kultur 2",
        "url": "/nn/node/2602",
      },
      Object {
        "id": "2603",
        "name": "Kommunikasjon og kultur 3",
        "nodeId": "2603",
        "text": "Kommunikasjon og kultur 3",
        "url": "/nn/node/2603",
      },
      Object {
        "id": "52293",
        "name": "Markedsføring og ledelse 1",
        "nodeId": "52293",
        "text": "Markedsføring og ledelse 1",
        "url": "/nn/node/52293",
      },
      Object {
        "id": "57933",
        "name": "Matematikk R1",
        "nodeId": "57933",
        "text": "Matematikk R1",
        "url": "/nn/node/57933",
      },
      Object {
        "id": "98361",
        "name": "Matematikk R2",
        "nodeId": "98361",
        "text": "Matematikk R2",
        "url": "/nn/node/98361",
      },
      Object {
        "id": "57934",
        "name": "Matematikk S1",
        "nodeId": "57934",
        "text": "Matematikk S1",
        "url": "/nn/node/57934",
      },
      Object {
        "id": "98366",
        "name": "Matematikk S2",
        "nodeId": "98366",
        "text": "Matematikk S2",
        "url": "/nn/node/98366",
      },
      Object {
        "id": "52222",
        "name": "Medie- og informasjonskunnskap 1 og 2",
        "nodeId": "52222",
        "text": "Medie- og informasjonskunnskap 1 og 2",
        "url": "/nn/node/52222",
      },
      Object {
        "beta": true,
        "id": "156500",
        "name": "Medieuttrykk og mediesamfunnet",
        "nodeId": "156500",
        "text": "Medieuttrykk og mediesamfunnet",
        "url": "/nn/node/156500",
      },
      Object {
        "id": "71082",
        "lang": "en",
        "name": "Samfunnsfaglig engelsk",
        "nodeId": "71082",
        "text": "Samfunnsfaglig engelsk",
        "url": "/en/node/71082",
      },
      Object {
        "id": "137416",
        "name": "Tysk 1",
        "nodeId": "137416",
        "text": "Tysk 1",
        "url": "/nn/node/137416",
      },
      Object {
        "id": "138655",
        "name": "Tysk 2",
        "nodeId": "138655",
        "text": "Tysk 2",
        "url": "/nn/node/138655",
      },
    ],
  },
]
`;

exports[`getCategoriesWithAllSubjects with some specialization subjects replaced 1`] = `
Array [
  Object {
    "name": "studiespesialiserende",
    "subjects": Array [
      Object {
        "id": "52234",
        "name": "Biologi 1",
        "nodeId": "52234",
        "text": "Biologi 1",
        "url": "/nb/node/52234",
      },
      Object {
        "id": "71085",
        "lang": "en",
        "name": "Engelskspråklig litteratur og kultur",
        "nodeId": "71085",
        "text": "Engelskspråklig litteratur og kultur",
        "url": "/en/node/71085",
      },
      Object {
        "id": "56850",
        "lang": "en",
        "name": "Internasjonal engelsk",
        "nodeId": "56850",
        "text": "Internasjonal engelsk",
        "url": "/en/node/56850",
      },
      Object {
        "id": "urn:subject:2",
        "name": "Kinesisk",
        "path": "/subject:2",
        "text": "Kinesisk",
        "url": "/subjects/subject:2",
      },
      Object {
        "id": "6118",
        "name": "Kommunikasjon og kultur 1",
        "nodeId": "6118",
        "text": "Kommunikasjon og kultur 1",
        "url": "/nb/node/6118",
      },
      Object {
        "id": "2602",
        "name": "Kommunikasjon og kultur 2",
        "nodeId": "2602",
        "text": "Kommunikasjon og kultur 2",
        "url": "/nb/node/2602",
      },
      Object {
        "id": "2603",
        "name": "Kommunikasjon og kultur 3",
        "nodeId": "2603",
        "text": "Kommunikasjon og kultur 3",
        "url": "/nb/node/2603",
      },
      Object {
        "id": "urn:subject:7",
        "name": "Markedsføring og ledelse 1",
        "path": "/subject:7",
        "text": "Markedsføring og ledelse 1",
        "url": "/subjects/subject:7",
      },
      Object {
        "id": "57933",
        "name": "Matematikk R1",
        "nodeId": "57933",
        "text": "Matematikk R1",
        "url": "/nb/node/57933",
      },
      Object {
        "id": "98361",
        "name": "Matematikk R2",
        "nodeId": "98361",
        "text": "Matematikk R2",
        "url": "/nb/node/98361",
      },
      Object {
        "id": "57934",
        "name": "Matematikk S1",
        "nodeId": "57934",
        "text": "Matematikk S1",
        "url": "/nb/node/57934",
      },
      Object {
        "id": "98366",
        "name": "Matematikk S2",
        "nodeId": "98366",
        "text": "Matematikk S2",
        "url": "/nb/node/98366",
      },
      Object {
        "id": "52222",
        "name": "Medie- og informasjonskunnskap 1 og 2",
        "nodeId": "52222",
        "text": "Medie- og informasjonskunnskap 1 og 2",
        "url": "/nb/node/52222",
      },
      Object {
        "id": "urn:subject:1",
        "name": "Medieuttrykk og mediesamfunnet",
        "path": "/subject:1",
        "text": "Medieuttrykk og mediesamfunnet",
        "url": "/subjects/subject:1",
      },
      Object {
        "id": "71082",
        "lang": "en",
        "name": "Samfunnsfaglig engelsk",
        "nodeId": "71082",
        "text": "Samfunnsfaglig engelsk",
        "url": "/en/node/71082",
      },
      Object {
        "id": "137416",
        "name": "Tysk 1",
        "nodeId": "137416",
        "text": "Tysk 1",
        "url": "/nb/node/137416",
      },
      Object {
        "id": "138655",
        "name": "Tysk 2",
        "nodeId": "138655",
        "text": "Tysk 2",
        "url": "/nb/node/138655",
      },
    ],
  },
]
`;
